# Mapplus-SDKRNTrans

./: .eslintrc.js  .gitignore  App.tsx  README.md  app.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
docs/: 开发环境搭建.md  运行示例工程.md
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
ios/: Podfile
ios/testTransRN/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/testTransRN.xcodeproj/: project.pbxproj
ios/testTransRN/Base.lproj/: Main.storyboard
ios/testTransRN/RNModules/: NativeHToolsModule.m
patches/: react-native-safe-area-context+4.7.4.patch
src/: App.tsx
src/assets/: index.ts
src/components/: BackButton.tsx  ImageButton.tsx  Loading.tsx  MapView.tsx  NavigationComponent.tsx  WebmapView.tsx  index.ts
src/constants/: BaseLayerData.ts
src/demos/: DemoList.tsx
src/demos/1_basemap/: 1_1_BaseMap.tsx
src/demos/2_mapobject/: 2_1_DataImport.tsx  2_2_MapOpenSave.tsx  2_3_DrawObject.tsx  2_4_DrawText.tsx  2_5_ObjectEdit.tsx  2_6_ObjectAttribute.tsx  2_7_LayerStyle.tsx  2_8_ThemeLayer.tsx
src/demos/3_maputils/: 3_1_Measure.tsx  3_2_Analyst.tsx  3_3_MapCallout.tsx  3_4_Navigation.tsx  navData.ts
src/example/: ThemeMap.json
src/navigators/: DemoStack.tsx  types.ts
src/pages/: Home.tsx
src/specs/v1/: NativeHTools.ts  (+2 more)
src/utils/: DataUtil.ts  LicenseUtil.ts  MapUtil.ts  ToolRefs.ts  WebMapUtil.ts  index.ts
(+22 files in other folders)
